--- a/GitHubUserInfo_NhungNguyen.xcodeproj/xcshareddata/xcschemes/GitHubUserInfo_NhungNguyen.xcscheme
+++ b/GitHubUserInfo_NhungNguyen.xcodeproj/xcshareddata/xcschemes/GitHubUserInfo_NhungNguyen.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BA534CB02D0EC0E400705ACA"
+               BuildableName = "GitHubUserInfo_NhungNguyenTests.xctest"
+               BlueprintName = "GitHubUserInfo_NhungNguyenTests"
+               ReferencedContainer = "container:GitHubUserInfo_NhungNguyen.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
